mobile number is set to namal

--- a/app/src/main/res/layout/recover_window.xml
+++ b/app/src/main/res/layout/recover_window.xml
@@ -38,7 +38,7 @@
             android:layout_above="@+id/edit_empid"
             android:layout_alignParentLeft="true"
             android:layout_weight="1"
-            android:text="Enter Your Employee ID"
+            android:text="Your Employee ID"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <EditText
