--- a/app/src/main/res/layout/set_password.xml
+++ b/app/src/main/res/layout/set_password.xml
@@ -23,7 +23,7 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Please enter old password"
+        android:text="Please enter old password / Code"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <EditText
