--- a/app/src/main/res/layout/select_menu.xml
+++ b/app/src/main/res/layout/select_menu.xml
@@ -14,7 +14,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Medium Text"
+            android:text="                      "
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <Button
