--- a/app/src/main/res/layout/place_order_item_add.xml
+++ b/app/src/main/res/layout/place_order_item_add.xml
@@ -27,9 +27,52 @@
             android:id="@+id/txt_vname_order_b"
             android:textSize="@dimen/norm_val" />
 
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Select ID"
+
+                android:id="@+id/textView2" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Select Name"
+                android:id="@+id/textView3" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+
+            <AutoCompleteTextView
+                android:layout_width="110dp"
+                android:layout_height="wrap_content"
+                android:text="ID"
+                android:id="@+id/auto_comp_item_id" />
+
+            <AutoCompleteTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:text="Name"
+                android:id="@+id/auto_comp_name" />
+        </LinearLayout>
+
         <TableLayout
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:id="@+id/table1"></TableLayout>
+            android:id="@+id/selected_table1"
+            android:stretchColumns="0,1,2,3,4"
+            ></TableLayout>
     </LinearLayout>
 </ScrollView>
