Add place order second discount auto retriving part for sellitem and constructor for sellitem with only itemID.

--- a/app/src/main/res/layout/place_order_item_add.xml
+++ b/app/src/main/res/layout/place_order_item_add.xml
@@ -65,7 +65,7 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:text="Name"
-                android:id="@+id/auto_comp_name" />
+                android:id="@+id/auto_comp_item_name" />
         </LinearLayout>
 
         <TableLayout
