--- a/app/src/main/res/layout/item_load_dialog.xml
+++ b/app/src/main/res/layout/item_load_dialog.xml
@@ -13,17 +13,32 @@
         android:text="Enter the Quantity"
         android:id="@+id/textView" />
 
-    <EditText
-        android:id="@+id/txt_Qty"
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginBottom="0dp"
-        android:layout_marginLeft="5dp"
-        android:hint="Enter QTY"
-        android:inputType="number">
-    </EditText>
+        android:layout_height="45dp"
+        android:id="@+id/QtyOrderLayout">
+
+        <EditText
+            android:id="@+id/txt_Qty"
+            android:layout_width="190dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginBottom="0dp"
+            android:layout_marginLeft="5dp"
+            android:hint="Enter QTY"
+            android:inputType="number">
+        </EditText>
+
+        <Spinner
+            android:layout_width="122dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/unit_spinner"
+            android:spinnerMode="dropdown"
+
+            />
+    </LinearLayout>
 
     <TextView
         android:layout_width="wrap_content"
@@ -32,10 +47,14 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Enter the Demanded Quantity"
         android:id="@+id/text_remain" />
-
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="45dp"
+        android:id="@+id/DemandQtyOrderLayout">
     <EditText
         android:id="@+id/edit_demand_qty"
-        android:layout_width="fill_parent"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginRight="5dp"
@@ -43,11 +62,19 @@
         android:layout_marginLeft="5dp"
         android:hint="Enter Name">
     </EditText>
+        <Spinner
+            android:layout_width="139dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/demand_unit_spinner"
+            android:spinnerMode="dropdown"
+
+            />
+        </LinearLayout>
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/dialogLayout">
 
         <Button
