--- a/app/src/main/res/layout/item_load_dialog.xml
+++ b/app/src/main/res/layout/item_load_dialog.xml
@@ -40,6 +40,22 @@
             />
     </LinearLayout>
 
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/Radiolink1">
+
+        <RadioGroup
+            android:id="@+id/hour_radio_group"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+            // This is where our buttons will be
+        </RadioGroup>
+
+        </LinearLayout>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
