--- a/app/src/main/res/layout-land/recover_window2.xml
+++ b/app/src/main/res/layout-land/recover_window2.xml
@@ -43,14 +43,14 @@
             android:id="@+id/edit_empid"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/textView3"
+            android:layout_above="@+id/txt_billVal_bill"
             android:layout_alignParentLeft="true" >
 
             <requestFocus />
         </EditText>
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/txt_billVal_bill"
             android:layout_width="182dp"
             android:layout_height="wrap_content"
             android:layout_above="@+id/lblqstn"
