--- a/app/src/main/res/layout/recover_window.xml
+++ b/app/src/main/res/layout/recover_window.xml
@@ -47,13 +47,13 @@
             android:id="@+id/edit_empid"
             android:layout_width="match_parent"
             android:layout_height="62dp"
-            android:layout_above="@+id/textView3"
+            android:layout_above="@+id/txt_billVal_bill"
             android:layout_alignParentLeft="true"
             android:layout_weight="1" >
         </EditText>
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/txt_billVal_bill"
             android:layout_width="182dp"
             android:layout_height="55dp"
             android:layout_above="@+id/lblqstn"
