--- a/app/src/main/res/layout/set_password.xml
+++ b/app/src/main/res/layout/set_password.xml
@@ -20,7 +20,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/txt_billVal_bill"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Please enter old password / Code"
