--- a/app/src/main/res/layout/create_bill.xml
+++ b/app/src/main/res/layout/create_bill.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:weightSum="1">
 
     <TextView
         android:layout_width="fill_parent"
@@ -57,9 +58,24 @@
         android:text="Selected Date"
         android:id="@+id/txt_date" />
 
-    <Button
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Create Bill"
-        android:id="@+id/btn_create_bill" />
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0.43">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Create Bill"
+            android:id="@+id/btn_create_bill" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Make payment"
+            android:id="@+id/btn_make_payment_cr_bill" />
+    </LinearLayout>
+
 </LinearLayout>
