--- a/app/src/main/res/layout/out_data.xml
+++ b/app/src/main/res/layout/out_data.xml
@@ -17,7 +17,8 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
-            android:indeterminate="false" />
+            android:indeterminate="false"
+            />
 
 
 
