--- a/app/src/main/res/layout/select_menu.xml
+++ b/app/src/main/res/layout/select_menu.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -34,12 +35,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Place an Order" />
-
-        <Button
-            android:id="@+id/btn_sync_data_to_pc"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Sync Data To PC" />
 
         <Button
             android:id="@+id/btn_recopy_bill"
@@ -83,6 +78,11 @@
             android:layout_height="wrap_content"
             android:text="Make Payment" />
 
+        <Button
+            android:id="@+id/btn_sync_data_to_pc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Sync Data To PC" />
 
 
     </LinearLayout>
