--- a/app/src/main/res/layout/complain_report.xml
+++ b/app/src/main/res/layout/complain_report.xml
@@ -13,7 +13,10 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="Complain maker"
-            android:id="@+id/txt_cmp_title" />
+            android:id="@+id/txt_cmp_title"
+            android:textColor="#ff0027ff"
+            android:textStyle="bold"
+            android:textSize="30dp" />
 
         <LinearLayout
             android:orientation="horizontal"
@@ -28,9 +31,9 @@
                 android:id="@+id/txt_cmp_vendor" />
 
             <AutoCompleteTextView
-                android:layout_width="200dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Vendor"
+                android:hint="Vendor"
                 android:id="@+id/txtauto_cmp_vendor"
                 />
         </LinearLayout>
@@ -47,15 +50,16 @@
                 android:id="@+id/txt_cmp_itemcode" />
 
             <AutoCompleteTextView
-                android:layout_width="200dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Itemcode"
+                android:hint="Itemcode"
                 android:id="@+id/textauto_cmp_itemcode" />
         </LinearLayout>
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
+            android:layout_height="fill_parent"
+            android:weightSum="1">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -65,9 +69,9 @@
                 android:id="@+id/txt_cmp_itemname" />
 
             <AutoCompleteTextView
-                android:layout_width="200dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Itemname"
+                android:hint="Itemname"
                 android:id="@+id/txtauto_cmp_itemname" />
         </LinearLayout>
         <TextView
@@ -97,6 +101,7 @@
             android:text="check"
             android:id="@+id/btn_compalin_submit2"
             android:layout_gravity="center_horizontal"
+            android:visibility="invisible"
             android:onClick="testme"
             />
     </LinearLayout>
