--- a/app/src/main/res/layout/place_order_item_add.xml
+++ b/app/src/main/res/layout/place_order_item_add.xml
@@ -37,6 +37,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Test"
+                android:visibility="invisible"
                 android:id="@+id/button_testing" />
 
             <Button
@@ -62,7 +63,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingLeft="70dp"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="Select Name"
                 android:id="@+id/txt_billVal_bill" />
@@ -76,14 +77,14 @@
             <AutoCompleteTextView
                 android:layout_width="110dp"
                 android:layout_height="wrap_content"
-                android:text="ID"
+                android:hint="ItemID"
                 android:id="@+id/auto_comp_item_id" />
 
             <AutoCompleteTextView
-                android:layout_width="150dp"
+                android:layout_width="200dp"
+                android:hint="ItemNamw"
                 android:layout_height="wrap_content"
                 android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:text="Name"
                 android:id="@+id/auto_comp_item_name" />
         </LinearLayout>
 
