--- a/app/src/main/res/layout/create_new_customer.xml
+++ b/app/src/main/res/layout/create_new_customer.xml
@@ -7,7 +7,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".CreateNewVendor" >
+    tools:context=".CreateNewVendor"
+    android:background="@android:drawable/arrow_up_float">
 
 
 
