--- a/app/src/main/res/layout/make_payment.xml
+++ b/app/src/main/res/layout/make_payment.xml
@@ -20,7 +20,7 @@
         android:textStyle="bold"
         android:textColor="#ff1337ff"
         android:textSize="30dp"
-        android:background="@android:color/darker_gray"/>
+        android:background="@android:drawable/bottom_bar"/>
 
 
 
@@ -75,7 +75,8 @@
         android:layout_height="51dp"
         android:orientation="horizontal"
         android:layout_gravity="center_horizontal"
-        android:id="@+id/radio_payment_options">
+        android:id="@+id/radio_payment_options"
+        android:background="@android:drawable/bottom_bar">
 
         <RadioButton
             android:layout_width="wrap_content"
