--- a/app/src/main/res/layout/edit_customer.xml
+++ b/app/src/main/res/layout/edit_customer.xml
@@ -28,7 +28,7 @@
         android:id="@+id/new_lblShopname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Shop Name"
+        android:text="Shop/store Name"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <AutoCompleteTextView
