--- a/app/src/main/res/layout/create_bill.xml
+++ b/app/src/main/res/layout/create_bill.xml
@@ -17,7 +17,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Bill No:- "
+        android:text="Bill/recipt No:- "
         android:id="@+id/txt_billNo_bill" />
 
     <TextView
