--- a/app/src/main/res/layout/edit_qty.xml
+++ b/app/src/main/res/layout/edit_qty.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Medium Text"
+        android:text="Medium/low Text"
         android:id="@+id/textView2"
         android:layout_weight="0.10" />
 
@@ -39,13 +39,13 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="New Button"
+            android:text="New Button1"
             android:id="@+id/button" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="New Button"
+            android:text="New Button2"
             android:id="@+id/button2" />
     </LinearLayout>
 
